--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 g-2/ScanCraft_chi2/mcmc/
 g-2/ScanCraft_chi2/packages/
-g-2/ScanCraft_exp/mcmc
-g-2/ScanCraft_exp/packages
+g-2/ScanCraft_exp/mcmc/
+g-2/ScanCraft_exp/packages/
