--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
-g-2/ScanCraft_chi2/mcmc/record
-g-2/ScanCraft_chi2/packages/
-g-2/ScanCraft_exp/mcmc/record
+g-2/ScanCraft_chi2/mcmc
+!g-2/ScanCraft_chi2/mcmc/inp.dat
+g-2/ScanCraft_chi2/packages
+g-2/ScanCraft_exp/mcmc
+!g-2/ScanCraft_exp/mcmc/inp.dat
 g-2/ScanCraft_exp/packages
